<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="__arcore_cancel">Cancel</string>
    <string name="__arcore_continue">Continue</string>
    <string name="__arcore_install_app">This application requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_install_feature">This feature requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_installing">Installing Google Play Services for AR…</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessories_remove_device">Remove</string>
    <string name="accessories_remove_device_confirmation">Remove this accessory?</string>
    <string name="accessories_remove_device_failure">Remove failed</string>
    <string name="accessories_remove_device_success">Accessory removed</string>
    <string name="accessory_status_disconnected_device_time_and_date">Last connected to %1$s at %2$s on %3$s.</string>
    <string name="accessory_status_disconnected_device_time_only">Last connected to %1$s at %2$s.</string>
    <string name="accessory_status_last_seen_device_time_and_date">Last seen connected to %1$s at %2$s on %3$s</string>
    <string name="accessory_status_last_seen_device_time_only">Last seen connected to %1$s at %2$s</string>
    <string name="accessory_status_no_connection_information">Location will be shown the next time you connect this accessory to your device</string>
    <string name="accessory_status_this_device">this device</string>
    <string name="account_image_description">Account image</string>
    <string name="action_help">Help</string>
    <string name="action_help_feedback">Help &amp; feedback</string>
    <string name="action_opensourcelicenses">Open source licenses</string>
    <string name="action_privacypolicy">Privacy policy</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_rename_device">Rename device</string>
    <string name="action_server_error">Something went wrong. Try again later.</string>
    <string name="action_termsofservice">Terms of service</string>
    <string name="activated_time">Activated: %1$s</string>
    <string name="add_contact_info_button_subtitle">In case someone finds the device</string>
    <string name="add_contact_info_email_address">Add email address</string>
    <string name="add_contact_info_message">Add message</string>
    <string name="add_contact_info_phone_number">Add phone number</string>
    <string name="adm_device_picker_device_loading_failure">Couldn\'t load devices</string>
    <string name="adm_device_picker_family_devices_tab">Family devices</string>
    <string name="adm_device_picker_no_devices_explanation">Your Android devices and connected accessories that are added to Find My Device will appear here</string>
    <string name="adm_device_picker_no_devices_header">Keep track of your devices</string>
    <string name="adm_device_picker_user_devices_tab">My devices</string>
    <string name="adm_device_picker_work_profile_explanation">To keep your location data private, not all devices can be shown</string>
    <string name="adm_device_picker_work_profile_header">Currently viewing your work profile</string>
    <string name="adm_devicepicker_status_current_device">This device</string>
    <string name="adm_devicepicker_status_lost">Marked as lost</string>
    <string name="adm_devicepicker_status_nearby">Nearby</string>
    <string name="adm_devicepicker_status_pending">Pending</string>
    <string name="adm_devicepicker_status_pending_with_validation_code">Pending (PIN: %1$s)</string>
    <string name="adm_devicepicker_status_separator">•</string>
    <string name="adm_devicepicker_status_shared">Shared</string>
    <string name="android_switch_account_suggestion_card_subtitle">To see the most recent location of %1$s, switch to your other Google Account or use Guest Mode</string>
    <string name="android_switch_account_suggestion_card_title">Switch accounts to view device</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Find Device</string>
    <string name="app_update_bottom_sheet_subtitle">Find My Device can now encrypt and store your devices’ recent locations or use the network of Android devices to locate them when they’re offline.</string>
    <string name="app_update_bottom_sheet_title">Update Find My Device</string>
    <string name="app_update_button_text">Update</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_dialog_password_hint">Password</string>
    <string name="auth_error_message">An error occurred. Please try again.</string>
    <string name="auth_error_message_bad_auth">The password that you entered is incorrect</string>
    <string name="biometric_login_prompt_title">Sign in to Find My Device</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="calculating_sharing_validation_code">Getting PIN...</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_owner">Call owner</string>
    <string name="cancel_sharing">Cancel sharing</string>
    <string name="cancel_sharing_application_confirmation_dialog_body">You won\'t be able to locate %1$s in Find My Device</string>
    <string name="category_icon_content_description">Device category logo</string>
    <string name="category_title">Category</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chime_notification_title">&lt;b&gt; %1$s &lt;/b&gt;</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="combined_notification_text">&lt;b&gt; %1$s &lt;/b&gt; %2$s</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_sharing_title">Confirm sharing</string>
    <string name="content_desc_back_button">Back</string>
    <string name="device_access_explanation">The following people can view the location of this device</string>
    <string name="device_access_title">Access</string>
    <string name="enter_new_password">Password</string>
    <string name="erase_device">Erase device</string>
    <string name="fullscreen_lock_device_fragment_title">Secure device</string>
    <string name="fullscreen_wipe_device_fragment_message">All data will be permanently erased from this device. After your device has been erased, you can’t locate it.\n\nIf your device is offline, erasing will begin when it next comes online.\n\nTo erase your device, you may need to sign in to your Google Account again.</string>
    <string name="invite_others_title">Invite others</string>
    <string name="lock_screen_message">Lock screen message (optional)</string>
    <string name="lock_screen_message_car_keys_deletion_notice">Your car keys will be deleted</string>
    <string name="lock_screen_message_car_keys_suspension_notice">Your car keys will be suspended</string>
    <string name="lock_screen_message_section_description">To help someone return your device, add a message or phone number to the lock screen. \n\nRemotely lock your device with your PIN, pattern, or password. If you don’t have a lock, you can set one.</string>
    <string name="lock_screen_message_title">Add lock screen info &amp; secure the device</string>
    <string name="lock_screen_password_section_description">Your device doesn\'t have a screen lock. Enter a password to protect your device. \n\nOnce you set the password, you won\'t be able to change it. Make sure to remember your password.</string>
    <string name="lock_screen_password_section_title">Set password</string>
    <string name="lock_screen_phone_number">Phone number (optional)</string>
    <string name="next">Next</string>
    <string name="refresh_shared_owners_content_description">Refresh access list</string>
    <string name="ring_volume_symbol_content_description">Ring volume logo</string>
    <string name="ring_volume_title">Ring volume</string>
    <string name="ringing_volume_default">Factory default</string>
    <string name="ringing_volume_high">High</string>
    <string name="ringing_volume_low">Low</string>
    <string name="ringing_volume_medium">Medium</string>
    <string name="secure_device">Secure device</string>
    <string name="select_category_icon_content_description">Select category</string>
    <string name="select_ring_volume_symbol_content_description">Select ring volume</string>
    <string name="share_device">Share device</string>
</resources>