<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.google.android.apps.adm.view.DeviceDetailsFieldView
        android:id="@+id/device_category_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonContentDescription="@string/select_category_icon_content_description"
        app:buttonIcon="@drawable/gs_arrow_drop_down_vd_theme_24"
        app:icon="@drawable/gs_category_vd_theme_24"
        app:iconContentDescription="@string/category_icon_content_description"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/category_title"/>
    <com.google.android.apps.adm.view.DeviceDetailsFieldView
        android:id="@+id/ring_volume_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:buttonContentDescription="@string/select_ring_volume_symbol_content_description"
        app:buttonIcon="@drawable/gs_arrow_drop_down_vd_theme_24"
        app:icon="@drawable/gs_volume_up_vd_theme_24"
        app:iconContentDescription="@string/ring_volume_symbol_content_description"
        app:layout_constraintTop_toBottomOf="@+id/device_category_field"
        app:title="@string/ring_volume_title"/>
    <TextView
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:id="@+id/access_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="24dp"
        android:text="@string/device_access_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ring_volume_field"/>
    <ImageView
        android:id="@+id/refresh_shared_owners"
        android:padding="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gs_refresh_vd_theme_24"
        android:contentDescription="@string/refresh_shared_owners_content_description"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/access_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/access_title"
        app:layout_constraintTop_toTopOf="@+id/access_title"/>
    <TextView
        android:textAppearance="?attr/textAppearanceBody2"
        android:id="@+id/access_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:text="@string/device_access_explanation"
        app:layout_constraintTop_toBottomOf="@+id/access_title"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/shared_owners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/access_explanation"/>
    <TextView
        android:textAppearance="?attr/textAppearanceBody2"
        android:id="@+id/confirm_sharing_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:text="@string/confirm_sharing_title"
        app:layout_constraintTop_toBottomOf="@+id/shared_owners"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/pending_owners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/confirm_sharing_title"/>
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/sharing_progress_indicator"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@+id/pending_owners"
        app:layout_constraintEnd_toEndOf="@+id/pending_owners"
        app:layout_constraintStart_toStartOf="@+id/shared_owners"
        app:layout_constraintTop_toTopOf="@+id/shared_owners"/>
    <TextView
        android:textAppearance="?attr/textAppearanceBody2"
        android:id="@+id/invite_others_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="24dp"
        android:text="@string/invite_others_title"
        app:layout_constraintTop_toBottomOf="@+id/pending_owners"/>
    <TextView
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:gravity="center_vertical"
        android:id="@+id/share_device"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/share_device"
        android:drawablePadding="28dp"
        android:drawableStart="@drawable/gs_add_vd_theme_24"
        app:layout_constraintTop_toBottomOf="@+id/invite_others_title"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/pending_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="confirm_sharing_title,pending_owners"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/sharing_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="invite_others_title,share_device"/>
</androidx.constraintlayout.widget.ConstraintLayout>
