<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationContentDescription="@string/content_desc_back_button"
        app:navigationIcon="@drawable/gs_arrow_back_vd_theme_24"
        app:title="@string/fullscreen_lock_device_fragment_title"/>
    <ScrollView
        android:id="@+id/lock_panel_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_lock"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">
        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">
            <TextView
                android:textAppearance="?attr/textAppearanceTitleSmall"
                android:textColor="?attr/colorPrimary"
                android:id="@+id/message_section_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_screen_message_title"/>
            <TextView
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:id="@+id/message_section_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_screen_message_section_description"/>
            <TextView
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:id="@+id/car_key_suspension_notice_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_screen_message_car_keys_suspension_notice"
                app:drawableStartCompat="@drawable/gs_info_vd_theme_24"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/maximum_lock_screen_message_length">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lock_screen_message"
                    android:selectAllOnFocus="true"
                    android:inputType="textCapSentences"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lock_screen_phone_number"
                    android:ems="10"
                    android:selectAllOnFocus="true"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_lock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/secure_device"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.GoogleMaterial3.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
