<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:id="@+id/ring_volume_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ring_volume_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="48dp"/>
    <RadioGroup
        android:textAppearance="?attr/textAppearanceBody1"
        android:id="@+id/ring_volume_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="10dp">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:textAppearance="?attr/textAppearanceBody1"
            android:id="@+id/radio_button_default"
            android:paddingLeft="18dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:minHeight="48dp"
            android:text="@string/ringing_volume_default"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:textAppearance="?attr/textAppearanceBody1"
            android:id="@+id/radio_button_high"
            android:paddingLeft="18dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:minHeight="48dp"
            android:text="@string/ringing_volume_high"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:textAppearance="?attr/textAppearanceBody1"
            android:id="@+id/radio_button_medium"
            android:paddingLeft="18dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:minHeight="48dp"
            android:text="@string/ringing_volume_medium"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:textAppearance="?attr/textAppearanceBody1"
            android:id="@+id/radio_button_low"
            android:paddingLeft="18dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:minHeight="48dp"
            android:text="@string/ringing_volume_low"/>
    </RadioGroup>
</LinearLayout>
