<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/set_password_panel_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?attr/textAppearanceTitleSmall"
            android:textColor="?attr/colorPrimary"
            android:id="@+id/password_section_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lock_screen_password_section_title"/>
        <TextView
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:id="@+id/password_section_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lock_screen_password_section_description"/>
        <Button
            android:id="@+id/car_key_suspension_notice_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/lock_screen_message_car_keys_suspension_notice"
            app:icon="@drawable/gs_info_vd_theme_24"
            style="@style/Widget.GoogleMaterial3.Button.TextButton.Icon"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:id="@+id/password_one_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_new_password"
                android:selectAllOnFocus="true"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:imeActionLabel="@string/next"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:id="@+id/password_two_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:selectAllOnFocus="true"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
