<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationContentDescription="@string/content_desc_back_button"
            app:navigationIcon="@drawable/gs_arrow_back_vd_theme_24"
            app:title="@string/erase_device"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:id="@+id/wipe_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/fullscreen_wipe_device_fragment_message"/>
            <TextView
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:gravity="center_vertical"
                android:id="@+id/car_key_deletion_notice_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lock_screen_message_car_keys_deletion_notice"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/gs_info_vd_theme_24"/>
            <Button
                android:id="@+id/btn_wipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/erase_device"
                style="@style/Widget.GoogleMaterial3.Button"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
